# Daemonize

./: .gitignore  CMakeLists.txt  README.md
Test/: Application.cpp  Application.h  CMakeLists.txt  TestApp.cpp  TestApp.h  main.cpp  test.cpp
daemonize/: CMakeLists.txt
daemonize/src/: Application.cpp  Daemon.cpp
